--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -92,3 +92,4 @@ dagger = { id = "com.google.dagger.hilt.android", version.ref = "daggerHilt" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlinSerialization" }
 jetpack-nav-safeargs = { id = "androidx.navigation.safeargs" }
 ktlint = { id = "org.jlleitschuh.gradle.ktlint", version.ref = "ktlint" }
+jacoco = { id = "jacoco" }
